--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,14 @@
 		  s.parentNode.insertBefore(hm, s);
 		})();
 	</script>
+
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+                skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+                inlineMath: [['$','$']]
+            }
+        });
   	<style type="text/css">
 	  	.docs-content{
 	  		margin-bottom: 10px;
