--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,12 +31,13 @@
 	</script>
 
     <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-            tex2jax: {
-                skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-                inlineMath: [['$','$']]
-            }
-        });
+    MathJax.Hub.Config({
+        tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+        }
+    });
+    </script>
   	<style type="text/css">
 	  	.docs-content{
 	  		margin-bottom: 10px;
